fixed: inspector has horizontal scroll

--- a/src/higher-order/with-tabbed-inspector/editor.scss
+++ b/src/higher-order/with-tabbed-inspector/editor.scss
@@ -1,5 +1,5 @@
 .ugb-panel-controls-separator {
-	margin: 0 -16px;
+	margin: 0;
 	background: #f0f3f5;
 	text-transform: uppercase;
 	font-size: 8px;
